[package]
name = "dns-transport"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false
test = false


[dependencies]

# dns wire protocol
dns = { path = "../dns" }

# logging
log = "0.4"

# tls networking
native-tls = { version = "0.2", optional = true }

# http response parsing
httparse = { version = "1.3", optional = true }

# DoH through reqwest
reqwest = { version = "0.12.9", optional = true, default-features = false, features = ["blocking"] }

# For http/https proxies
http = "1.0"
url = "2.2"

rustls = { version = "0.23", optional = true }

rustls-pki-types = { version = "1.10", optional = true }

webpki-roots = { version = "0.26", optional = true }

cfg-if = "1"

[features]
default = []  # these are enabled in the main dog crate

with_tls   = []
with_https = ["dep:httparse", "dep:reqwest"]

with_nativetls = ["dep:native-tls", "reqwest?/native-tls"]
with_nativetls_vendored = ["dep:native-tls", "native-tls?/vendored", "reqwest?/native-tls-vendored"]
with_rustls = ["dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots", "reqwest?/rustls-tls-webpki-roots"]
